--- a/project.html
+++ b/project.html
@@ -41,37 +41,14 @@
 
             </div>
 
-            <hr style="margin: 25px 0">
-
-            <h1 style="margin: 25px 0">Media</h1>
-            <div id="screenshot-carousel" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner" id="screenshot-container">
-                    <!-- Screenshots will be inserted here -->
+            <div id="media-container">
+                <hr style="margin: 25px 0">
+            
+                <h1 style="margin: 25px 0">Media</h1>
+            
+                <div id="media-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); gap: 20px;">
+                    <!-- Screenshots and videos will be inserted here -->
                 </div>
-                <a class="carousel-control-prev" href="#screenshot-carousel" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#screenshot-carousel" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-
-            <hr style="margin: 25px">
-
-            <div id="video-carousel" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner" id="video-container">
-                    <!-- Screenshots will be inserted here -->
-                </div>
-                <a class="carousel-control-prev" href="#video-carousel" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#video-carousel" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
             </div>
         </div>
     </main>
