--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Your Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
@@ -13,8 +14,8 @@
     <header>
         <nav style="margin:50px">
             <div style="text-align: center">
-                <h1 style="font-size: 32pt">Jesse van Vliet</h1>
-                <h3 style="margin-bottom:50px">Gameplay Programmer</h3>
+                <p style="font-size: 32pt">Jesse van Vliet</p>
+                <p style="margin-bottom:50px">Gameplay Programmer</p>
                 <ul class="menu">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -93,8 +94,20 @@
             <section class="portfolio">
 
             </section>
+
+
         </div>
     </main>
+
+
+    <section class="other">
+        <div>
+            <h1 style="margin: 25px 0; text-align: left;" >Other Projects</h1>
+            <ul id="other-projects">
+            </ul>
+        </div>
+        
+    </section>
 
     <section class="social-section">
         <a href="https://www.linkedin.com/in/jesse-j-van-vliet/">LinkedIn</a><span>,&nbsp;</span><a href="mailto:jessevanvliet@hotmail.com">Mail</a>
