--- a/project.html
+++ b/project.html
@@ -13,8 +13,8 @@
     <header>
         <nav style="margin:50px">
             <div style="text-align: center">
-                <h1 style="font-size: 32pt">Jesse van Vliet</h1>
-                <h3 style="margin-bottom:50px">Gameplay Programmer</h3>
+                <p style="font-size: 32pt">Jesse van Vliet</p>
+                <p style="margin-bottom:50px">Gameplay Programmer</p>
                 <ul class="menu">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -46,7 +46,7 @@
             
                 <h1 style="margin: 25px 0">Media</h1>
             
-                <div id="media-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(500px, 1fr)); gap: 20px;">
+                <div id="media-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 20px;">
                     <!-- Screenshots and videos will be inserted here -->
                 </div>
             </div>
