--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <p style="font-size: 32pt">Jesse van Vliet</p>
                 <p style="margin-bottom:50px">Gameplay Programmer</p>
                 <ul class="menu">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
@@ -102,7 +102,7 @@
 
     <section class="other">
         <div>
-            <h1 style="margin: 25px 0; text-align: left;" >Other Projects</h1>
+            <h1 style="margin: 25px 0;" >Other Projects</h1>
             <ul id="other-projects">
             </ul>
         </div>
