--- a/about.html
+++ b/about.html
@@ -62,7 +62,8 @@
             const container = canvas.parentElement;
             const containerWidth = container.clientWidth;
             const viewport = page.getViewport({ scale: 1 });
-            const scale = containerWidth / viewport.width;
+
+            const scale = containerWidth / viewport.width * 0.5;
     
             // Apply calculated scale
             const scaledViewport = page.getViewport({ scale });
