--- a/about.html
+++ b/about.html
@@ -27,6 +27,12 @@
 
     <section class="intro-section">
         <div class="about-container">
+            <p><a style="color:#fff" href="jessevanvliet-cv.pdf" class="download-button">Open CV (new tab)</a></p>
+        </div>
+    </section>
+
+    <section class="intro-section">
+        <div class="about-container">
             <canvas id="pdf-render" style="border: 1px solid #ccc; margin: 0 auto; display: block;"></canvas>
         </div>
     </section>
