--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 
     <section class="intro-section">
         <div class="about-container">
-            <p><a style="color:#fff" href="jessevanvliet-cv.pdf" class="download-button">Open CV (new tab)</a></p>
+            <p><a style="color:#fff" href="jessevanvliet-cv.pdf" class="download-button">Open CV</a></p>
         </div>
     </section>
 
