--- a/contact.html
+++ b/contact.html
@@ -24,9 +24,9 @@
                 <p style="font-size: 32pt">Jesse van Vliet</p>
                 <p style="margin-bottom:50px">Gameplay Programmer</p>
                 <ul class="menu">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="index">Home</a></li>
+                    <li><a href="about">About</a></li>
+                    <li><a href="contact">Contact</a></li>
                 </ul>
             </div>
         </nav>
