--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                     <select id="languageFilter" class="filter">
                         <option value="all">All</option>
                         <option value="C++">C++</option>
+                        <option value="Verse">Verse</option>
                         <option value="C#">C#</option>
                     </select>
                     <div class="reset-filter" data-target="languageFilter">
@@ -53,6 +54,7 @@
                     <select id="engineFilter" class="filter">
                         <option value="all">All</option>
                         <option value="Unreal">Unreal</option>
+                        <option Value="UEFN">UEFN</option>
                         <option value="Unity">Unity</option>
                         <option value="Radiance">Radiance</option>
                     </select>
