--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                     <select id="typeFilter" class="filter">
                         <option value="all">All</option>
                         <option value="BSS">Bright Star Studios</option>
+                        <option value="Zloppy-Games">Zloppy Games</option>
                         <option value="BH">Baer &amp; Hoggo</option>
                         <option value="HKU">University of the Arts Utrecht</option>
                         <option value="Hobby">Hobby Projects</option>
