--- a/project.html
+++ b/project.html
@@ -17,8 +17,8 @@
                 <p style="margin-bottom:50px">Gameplay Programmer</p>
                 <ul class="menu">
                     <li><a href="index">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="about">About</a></li>
+                    <li><a href="contact">Contact</a></li>
                 </ul>
             </div>
         </nav>
